# pibench

./: .env.example  .gitignore  Dockerfile.greenx  Dockerfile.purple  README.md  pyproject.toml
backup/2026-02-24_orchestrator_rebuild/: __init__.py  core.py
backup/20260303_scen009_removed/: scen_009_house_closing.json
backup/base_backup/: README.md
backup/others_backup/: .gitignore  pyproject.toml
docs/: IMPLEMENTATION_GUIDE.md  LAYER3_AUDIT_STATUS.md  README.md  SHARED_DB_PLAN.md  TODO.md  architecture_wrap_not_replace.md  decision_signal_design.md  evaluation-reference.md  policy-benchmark-literature-survey.md  scenario-schema.md  scenario_field_inventory.md  taxonomy-migration.md
docs/archive/: README.md
docs/guides/: scenario-authoring.md
docs/plans/: core-engine-spec.md  deepen-scenarios.md  environment-blueprint.md  generator-polish.md  helpdesk_admin_reset_gap_note.md  hooks-sprints.md  open-source-readiness.md  orchestrator-runner-blueprint.md  per-scenario-tools.md
docs/specs/: episode-isolation.md  evaluation-rigor.md  observability.md  pi-bench-spec.md  pi-bench.md  (+1 more)
domains/: generic.py
run_records/: agentbeats_full_set_gpt54_2026-04-14.md
scratchpad/: README.md
scripts/: convert_outcomes_to_criteria.py  generate_helpdesk_admin_reset_stage.py  run_a2a_interactive.sh  run_e2e_verify.sh  run_full_set_local.py  run_generated_helpdesk_eval.py  run_mismatch_10x.py  run_scenario.py  run_single_scenario_repeat.sh  test_scenario.py  validate_generated_scenarios.py
ui/: .gitignore  index.html  package-lock.json  package.json
ui/src/: App.tsx  (+1 more)
(+435 files in other folders)
