[project]
name = "pi-bench"
version = "0.1.0"
description = "Policy interpretation benchmark for AI agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "loguru",
    "litellm",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.27",
    "a2a-sdk>=0.2",
    "starlette>=0.27",
    "sse-starlette>=2.1",
    "typing-extensions>=4.0",
]

[project.scripts]
pi = "pi_bench.cli:main"
pi-bench-green = "pi_bench.a2a.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_bench", "domains"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:capture -p no:rerunfailures"
